# audio-story-maker-for-kids

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml  requirements.txt
tonie_storymaker/: cli.py  config.py
tonie_storymaker/tonies_uploader/: __init__.py  uploader.py
tonie_storymaker/tts_engine/: __init__.py  audio_utils.py  synthesize.py  text_utils.py
tonie_storymaker/voice_profile/: __init__.py  record.py
